--- a/TaskManager_BL/TaskTracker_BL.csproj
+++ b/TaskManager_BL/TaskTracker_BL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.23.1" />
     <PackageReference Include="Quartz" Version="3.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
