--- a/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.23.1" />
     <PackageReference Include="Quartz" Version="3.5.0" />
     <PackageReference Include="Quartz.AspNetCore" Version="3.5.0" />
