--- a/TaskManager_BL/TaskTracker_BL.csproj
+++ b/TaskManager_BL/TaskTracker_BL.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.23.1" />
@@ -20,6 +21,10 @@
   <ItemGroup>
     <ProjectReference Include="..\TaskTracker.Core\TaskTracker.Core.csproj" />
     <ProjectReference Include="..\TaskTracker_DAL\TaskTracker_DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EntityValidation\" />
   </ItemGroup>
 
 </Project>
