--- a/TaskTracker_DAL/TaskTracker_DAL.csproj
+++ b/TaskTracker_DAL/TaskTracker_DAL.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskTracker.Core\TaskTracker.Core.csproj" />
+  </ItemGroup>
+
 </Project>
