Switched to Azure SQL Db

--- a/TaskTracker/appsettings.json
+++ b/TaskTracker/appsettings.json
@@ -30,7 +30,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TaskTracker_Database;Integrated Security=True",
+    "Default": ,
     "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HangfireTest;Integrated Security=True"
   },
   "AuthOptions": {
@@ -50,6 +50,8 @@
   "Quartz": {
     "quartz.scheduler.instanceName": "Quartz ASP.NET Core Sample Scheduler"
   },
-
+  "ImgOptions": {
+    "ImgPath": "D:\\Files\\"
+  }
 }
 
