--- a/TaskTracker/appsettings.json
+++ b/TaskTracker/appsettings.json
@@ -30,7 +30,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=tcp:markodatabaseserver.database.windows.net,1433;Initial Catalog=TaskTrackerDatabase;Persist Security Info=False;User ID=markosober;Password=487113798Asd*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Default": ,
     "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HangfireTest;Integrated Security=True"
   },
   "AuthOptions": {
